[gd_scene load_steps=16 format=3 uid="uid://c3sccy6x0ht5j"]

[ext_resource type="Script" path="res://examples_dd3d/DebugDrawDemoScene.gd" id="1"]
[ext_resource type="FontFile" uid="uid://erdgllynwqkw" path="res://examples_dd3d/Roboto-Bold.ttf" id="2_aedbq"]

[sub_resource type="Animation" id="9"]
resource_name = "New Anim"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spatial2:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 1), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.31558, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spatial5:transform")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1, 1), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1.5801, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spatial4:transform")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.443643, 0, 1.53767), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.443643, -0.791383, 1.53767)]
}

[sub_resource type="Animation" id="10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spatial2:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spatial5:transform")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spatial4:transform")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.443643, 0, 1.53767)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nj4nv"]
_data = {
"New Anim": SubResource("9"),
"RESET": SubResource("10")
}

[sub_resource type="SphereShape3D" id="4"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="5"]
transparency = 1
albedo_color = Color(0.54902, 0.54902, 0.729412, 0.403922)
emission_enabled = true
emission = Color(0.752941, 0.741176, 0.862745, 1)

[sub_resource type="Animation" id="6"]
resource_name = "New Anim"
length = 3.0
loop_mode = 1
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayEmitter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 1.3, 1, 1.31237e-06, -9.55543e-07, -2.2333e-06, 1, 2.3, 1, -0.158418, 0.0315871, 0.980558, -0.111409)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RayEmitter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -1.03574, 2.47907, -0.819963, 0.5, 1, 0.914907, 1.78507, -0.103575, 1.3, 1, 0.00863326, 2.47907, -0.595551, 2.3, 1, 1.00051, 1.4046, 1.02585)

[sub_resource type="Animation" id="7"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RayEmitter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -1.03574, 2.47907, -0.819963)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RayEmitter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vh8ml"]
_data = {
"New Anim": SubResource("6"),
"RESET": SubResource("7")
}

[sub_resource type="StandardMaterial3D" id="1"]
shading_mode = 0
albedo_color = Color(0.533333, 0.105882, 0.105882, 1)

[sub_resource type="Animation" id="8"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(10.4482, -1.49353, -0.450473)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7f1a"]
_data = {
"RESET": SubResource("8")
}

[sub_resource type="Theme" id="3"]

[sub_resource type="GDScript" id="2"]
script/source = "@tool
extends Control

@export var switch_to_scene = \"\"

var frames := 0

func _process(_delta):
	frames += 1
	if frames == 3:
		_deferred_init()
		set_process(false)

func _deferred_init():
	$GC/VB/H/Button.disabled = true
	
	var test := DebugDraw2D.get_graph(&\"FPS\")
	if test:
		$GC/VB/H/FPSEnabled.button_pressed = test.enabled
		$GC/VB/FPSMS.button_pressed = test.frame_time_mode
		$GC/VB/HSlider.value = test.size.x
		$GC/VB/HSlider2.value = test.buffer_size
	
	if get_tree():
		await get_tree().create_timer(0.2).timeout
	
	$GC/VB/H/Button.disabled = false

func _on_CheckBox_toggled(button_pressed: bool) -> void:
	var cfg = DebugDraw2D.get_graph(&\"FPS\")
	if cfg:
		cfg.enabled = button_pressed

func _on_FPSMS_toggled(button_pressed: bool) -> void:
	var cfg = DebugDraw2D.get_graph(&\"FPS\")
	if cfg:
		cfg.frame_time_mode = button_pressed

func _on_HSlider_value_changed(value: float) -> void:
	get_parent().graph_size = Vector2i(int(value), get_parent().graph_size.y)

func _on_HSlider2_value_changed(value: float) -> void:
	get_parent().graph_buffer_size = int(value)

func _on_Button_pressed() -> void:
	get_tree().call_deferred(\"change_scene_to_file\", switch_to_scene)
"

[node name="DebugDrawDemoScene" type="Node3D"]
process_priority = 1
script = ExtResource("1")
custom_font = ExtResource("2_aedbq")
start_culling_distance = 55.0
text_groups_position = 2
text_groups_default_font_size = 15
text_groups_title_font_size = 20
text_groups_text_font_size = 17
graph_text_precision = 1

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.953191, 0.30237, 0, -0.30237, 0.953191, -3.988, 13.525, 37.21)
cull_mask = 1
current = true
fov = 38.8
near = 2.63
far = 60.0

[node name="Panel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(300, 300)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_right = 300.0
grow_vertical = 0

[node name="ViewportContainer" type="SubViewportContainer" parent="Panel"]
layout_mode = 2

[node name="Viewport" type="SubViewport" parent="Panel/ViewportContainer"]
handle_input_locally = false
size = Vector2i(300, 300)
render_target_update_mode = 0

[node name="CameraLayer2_5" type="Camera3D" parent="Panel/ViewportContainer/Viewport"]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, -3.988, 39.474, 14.053)
cull_mask = 2
fov = 38.8
near = 2.63
far = 52.5

[node name="Zones" type="Node3D" parent="."]

[node name="Spheres" type="Node3D" parent="Zones"]
transform = Transform3D(8.3761, 0, 0, 0, 4.89771, 0, 0, 0, 9.36556, -12.4687, 0.645876, -7.74484)

[node name="Path" type="Node3D" parent="Zones"]
transform = Transform3D(5.95153, 0, 0, 0, 6.78237, 0, 0, 0, 6.31617, 0.184938, 1.49839, -7.18731)

[node name="Boxes" type="Node3D" parent="Zones"]
transform = Transform3D(10.0513, 0, 0, 0, 5.99877, 0, 0, 0, 12.1174, -13.8218, -0.206735, 6.43672)

[node name="Misc" type="Node3D" parent="Zones"]
transform = Transform3D(4.38886, 0, 0, 0, 2.72083, 0, 0, 0, 7.17107, -3.37336, -0.206735, 4.28992)

[node name="Cylinders" type="Node3D" parent="Zones"]
transform = Transform3D(9.78549, 0, 0, 0, 4.20302, 0, 0, 0, 5.62455, -23.6827, -0.015712, -6.19233)

[node name="Lines" type="Node3D" parent="Zones"]
transform = Transform3D(10.7186, 0, 0, 0, 3.9777, 0, 0, 0, 7.05487, 10.6302, 1.91174, -7.11416)

[node name="LinePathAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../LinePath")
autoplay = "New Anim"
libraries = {
"": SubResource("AnimationLibrary_nj4nv")
}

[node name="LinePath" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.67362, -8)

[node name="Spatial" type="Node3D" parent="LinePath"]

[node name="Spatial2" type="Node3D" parent="LinePath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 1)

[node name="Spatial3" type="Node3D" parent="LinePath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.462435, 0, 3)

[node name="Spatial4" type="Node3D" parent="LinePath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.443643, 0, 1.53767)

[node name="Spatial5" type="Node3D" parent="LinePath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1, 1)

[node name="Spatial6" type="Node3D" parent="LinePath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -1)

[node name="Spatial7" type="Node3D" parent="LinePath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Cylinder1" type="Node3D" parent="."]
transform = Transform3D(1.30832, 0.213863, -3.73947e-07, 0.60031, -0.408523, 0.929687, 0.225355, -0.153359, -2.47654, -25.6488, 0, -6.39029)

[node name="Cylinder2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.134, -9.53674e-07, -6.39029)

[node name="SphereTransform" type="Node3D" parent="."]
transform = Transform3D(3.018, 0, 0, 0, 0.945452, -0.636291, 0, 1.04515, 4.40664, -14.547, 0.166728, -5.65327)

[node name="SphereHDTransform" type="Node3D" parent="."]
transform = Transform3D(1.26984, 1.16629, -2.42095, 0.098772, 0.80937, 4.21576, -2.65493, 0.587941, -1.00109, -14.5341, 0.166728, -10.3981)

[node name="SpherePosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.6349, 0.625214, -5.81358)

[node name="Box1" type="Node3D" parent="."]
transform = Transform3D(2.90583, -0.000527017, -5.34615, 0.00469241, 3.92788, 0.0141019, 0.556318, -0.0303774, 1.91619, -14.007, 0, 2.794)

[node name="Box2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.4103, 0, 6.71577)

[node name="Box3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.0067, 0, 10.5182)

[node name="BoxOutOfDistanceCulling" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.608, 0.344, -16.314)

[node name="AABB" type="Node3D" parent="."]
transform = Transform3D(-0.919907, -0.386434, 0.0666312, -0.388017, 0.921572, -0.0121951, -0.0566928, -0.0370723, -0.997703, -11.4765, -4.76837e-07, 7.18889)

[node name="a" type="Node3D" parent="AABB"]
transform = Transform3D(1, -1.53668e-08, 2.23517e-08, 1.7928e-08, 1, 1.11759e-08, -1.49012e-08, 0, 1, -0.5468, -2.45083, -0.991707)

[node name="b" type="Node3D" parent="AABB"]
transform = Transform3D(1, -1.53668e-08, 1.86265e-08, -1.18744e-08, 1, 1.11759e-08, -1.11759e-08, 0, 1, 0.821057, 1.16918, 2.89658)

[node name="AABB_fixed" type="Node3D" parent="."]
transform = Transform3D(0.834492, 0, -0.551019, 0, 1, 0, 0.55102, 0, 0.834493, -16.8188, -1.788, 7.05104)

[node name="Misc" type="Node3D" parent="."]

[node name="Billboard" type="Node3D" parent="Misc"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.18606, -0.331599, 6.66091)

[node name="Arrow" type="Node3D" parent="Misc"]
transform = Transform3D(0.802141, -0.286294, -0.524028, -0.539546, 0.0285125, -0.841473, 0.25585, 0.957718, -0.131597, -4.38512, -1.18432, 6.66091)

[node name="Position" type="Node3D" parent="Misc"]
transform = Transform3D(1.51514, 0.589536, 1.00858, -1.34875, 0.662262, 1.133, 0, -0.462445, 2.90833, -2.73567, -0.331599, 2.69873)

[node name="GizmoNormal" type="Node3D" parent="Misc"]
transform = Transform3D(1.98138, 0, -0.70285, 0, 0.999999, 0, 0.434655, 0, 3.20395, -2.69921, -0.331599, 4.79165)

[node name="GizmoTransform" type="Node3D" parent="Misc"]
transform = Transform3D(0.879881, 0.248446, -0.405072, -0.346604, 0.918688, -0.189411, 0.325077, 0.307059, 0.894449, -4.428, -0.458, 4.259)

[node name="GizmoOneColor" type="Node3D" parent="Misc"]
transform = Transform3D(0.385568, 0.0415614, 0.921743, 0.082879, 0.993386, -0.0794599, -0.91895, 0.107031, 0.379573, -4.428, -0.139425, 2.50494)

[node name="Grids" type="Node3D" parent="Misc"]
transform = Transform3D(0.707106, 0, -0.707108, 0, 1, 0, 0.707108, 0, 0.707106, 7.45433, -2.5, 5.15179)

[node name="GridCentered" type="Node3D" parent="Misc/Grids"]
transform = Transform3D(1.74492, 0.723785, -1.74493, -1.24976, -7.72562e-08, -1.24975, -1.74493, 0.723783, 1.74493, 1.74919, -0.0010004, 1.75466)
rotation_edit_mode = 2

[node name="Subdivision" type="Node3D" parent="Misc/Grids/GridCentered"]
transform = Transform3D(1, -6.03961e-14, -2.68221e-07, 3.55271e-13, 1, 1.42109e-14, -1.19209e-07, 1.1724e-13, 1, -0.2, 4.76837e-07, 0.4)

[node name="Grid" type="Node3D" parent="Misc/Grids"]
transform = Transform3D(5, 0, 2.38419e-07, 0, 1, 0, -2.38419e-07, 0, 5, 0, 0, 0)

[node name="Subdivision" type="Node3D" parent="Misc/Grids/Grid"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 0.999999, 1.90735e-05, 0, 4.65661e-10, 0.999999, 1, 0, 1)

[node name="Lines" type="Node3D" parent="."]
transform = Transform3D(1.51514, 0.589536, 1.00858, -1.34875, 0.662262, 1.133, 0, -0.462445, 2.90833, 10.2488, -0.331599, -10.3326)

[node name="1" type="Node3D" parent="Lines"]
transform = Transform3D(1, 6.61592e-09, 2.23038e-08, 9.40939e-07, 1, 0, -2.76085e-08, -1.49012e-08, 1, -1.46213, -4.03317, 0.61692)

[node name="2" type="Node3D" parent="Lines"]
transform = Transform3D(1, 6.61592e-09, 2.23038e-08, 9.40939e-07, 1, 0, -2.76085e-08, -1.49012e-08, 1, -1.01875, -1.79584, -0.163045)

[node name="3" type="Node3D" parent="Lines"]
transform = Transform3D(1, 6.61592e-09, 2.23038e-08, 6.87561e-07, 1, 0, -2.87275e-08, -1.49012e-08, 1, -0.1559, -0.407045, 0.0523388)

[node name="4" type="Node3D" parent="Lines"]
transform = Transform3D(1, 6.61592e-09, 2.23038e-08, 3.42235e-07, 1, 0, -4.57815e-08, -1.49012e-08, 1, 1.18591, 1.8987, 0.301906)

[node name="5" type="Node3D" parent="Lines"]
transform = Transform3D(-0.998871, -0.0207882, -0.0355643, 0.0855375, -0.5714, -2.68836, 0.0136011, -0.249864, 0.572532, 1.43126, 0.26242, 1.92347)

[node name="6" type="Node3D" parent="Lines"]
transform = Transform3D(-0.998872, -0.0207882, -0.0355643, 0.0855371, -0.5714, -2.68836, 0.0136012, -0.249864, 0.572533, 1.43441, 1.50606, 1.20028)

[node name="Target" type="Node3D" parent="Lines"]
transform = Transform3D(1, -2.7352e-06, 2.60722e-07, 3.30799e-06, 1, 0, -3.51517e-07, -1.49012e-08, 1, -0.69134, 0.176476, 1.30597)

[node name="HitTest" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.48967, -1.03227, 9.524)

[node name="StaticBody" type="StaticBody3D" parent="HitTest"]

[node name="CollisionShape" type="CollisionShape3D" parent="HitTest/StaticBody"]
shape = SubResource("4")

[node name="CSGSphere" type="CSGSphere3D" parent="HitTest/StaticBody"]
radius = 1.0
radial_segments = 16
rings = 10
material = SubResource("5")

[node name="RayEmitter" type="Node3D" parent="HitTest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.03574, 2.47907, -0.819963)

[node name="RayCast" type="RayCast3D" parent="HitTest/RayEmitter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.732104, 0, -0.814761)
target_position = Vector3(0, -3.464, 0)

[node name="RayCast2" type="RayCast3D" parent="HitTest/RayEmitter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.684873, 0, -0.791145)
target_position = Vector3(0, -3.464, 0)

[node name="RayCast3" type="RayCast3D" parent="HitTest/RayEmitter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.708488, 0, 0.543175)
target_position = Vector3(0, -3.464, 0)

[node name="RayCast4" type="RayCast3D" parent="HitTest/RayEmitter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.708489, 0, 0.566791)
target_position = Vector3(0, -3.464, 0)

[node name="RayCast5" type="RayCast3D" parent="HitTest/RayEmitter"]
transform = Transform3D(0.974217, -0.225614, 0, 0.225614, 0.974217, 0, 0, 0, 1, -0.447564, 0, -0.259778)
target_position = Vector3(0, -3.464, 0)

[node name="RayCast6" type="RayCast3D" parent="HitTest/RayEmitter"]
transform = Transform3D(0.935992, 0.352021, 0, -0.352021, 0.935992, 0, 0, 0, 1, 0.35227, -0.245904, -0.25849)
target_position = Vector3(0, -3.464, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="HitTest"]
autoplay = "New Anim"
playback_process_mode = 0
libraries = {
"": SubResource("AnimationLibrary_vh8ml")
}

[node name="LagTest" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4482, -1.49353, -0.450473)
size = Vector3(2, 2, 2)
material = SubResource("1")

[node name="RESET" type="AnimationPlayer" parent="LagTest"]
libraries = {
"": SubResource("AnimationLibrary_a7f1a")
}

[node name="CustomCanvas" type="Control" parent="."]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -639.0
offset_top = 36.0
offset_right = -36.0
offset_bottom = -36.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="Settings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("3")
script = SubResource("2")
switch_to_scene = "res://examples_dd3d/DebugDrawDemoSceneCS.tscn"

[node name="GC" type="GridContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Label" type="Label" parent="Settings/GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "GDScript example"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="VB" type="VBoxContainer" parent="Settings/GC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="H" type="HBoxContainer" parent="Settings/GC/VB"]
layout_mode = 2

[node name="FPSEnabled" type="CheckBox" parent="Settings/GC/VB/H"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "FPS Graph enabled"

[node name="Button" type="Button" parent="Settings/GC/VB/H"]
layout_mode = 2
text = "Switch to C#"

[node name="FPSMS" type="CheckBox" parent="Settings/GC/VB"]
layout_mode = 2
button_pressed = true
text = "FPS Graph ms or FPS"

[node name="HSlider" type="HSlider" parent="Settings/GC/VB"]
layout_mode = 2
min_value = 50.0
max_value = 1000.0
value = 200.0

[node name="HSlider2" type="HSlider" parent="Settings/GC/VB"]
layout_mode = 2
min_value = 50.0
max_value = 1000.0
value = 128.0

[connection signal="toggled" from="Settings/GC/VB/H/FPSEnabled" to="Settings" method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Settings/GC/VB/H/Button" to="Settings" method="_on_Button_pressed"]
[connection signal="toggled" from="Settings/GC/VB/FPSMS" to="Settings" method="_on_FPSMS_toggled"]
[connection signal="value_changed" from="Settings/GC/VB/HSlider" to="Settings" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Settings/GC/VB/HSlider2" to="Settings" method="_on_HSlider2_value_changed"]
